--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>user-service</module>
         <module>api-gateway</module>
+        <module>eureka-server</module>
     </modules>
 
     <!-- DEPENDENCIES -->
