Change Swagger config properties

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -39,5 +39,7 @@ eureka.instance.prefer-ip-address=true
 # Swagger config
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger
 springdoc.swagger-ui.deep-linking=false
+
+springdoc.swagger-ui.path=/user-service/swagger/ui
+springdoc.api-docs.path=/user-service/swagger/api-doc
