Add common_proto project

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>user-service</module>
         <module>api-gateway</module>
         <module>eureka-server</module>
+        <module>common-proto</module>
     </modules>
 
     <!-- DEPENDENCIES -->
