--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.study</groupId>
     <artifactId>study-microservices</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging> <!-- BẮT BUỘC là pom -->
+    <packaging>pom</packaging>
 
     <name>StudyPal Microservices Parent</name>
     <description>Parent project for StudyPal microservices</description>
@@ -17,7 +17,6 @@
         <module>user-service</module>
         <module>api-gateway</module>
         <module>eureka-server</module>
-        <module>common-proto</module>
     </modules>
 
     <!-- DEPENDENCIES -->
