--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -7,14 +7,12 @@
 
 	<!-- Parent Spring Boot -->
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.3</version>
-		<relativePath/>
+		<groupId>com.study</groupId>
+		<artifactId>study-microservices</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<!-- Basic Info -->
-	<groupId>com.study</groupId>
 	<artifactId>user-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>user-service</name>
@@ -96,6 +94,13 @@
 			<groupId>net.devh</groupId>
 			<artifactId>grpc-server-spring-boot-starter</artifactId>
 			<version>2.15.0.RELEASE</version>
+		</dependency>
+
+		<!-- Common Library -->
+		<dependency>
+			<groupId>com.study</groupId>
+			<artifactId>common</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- gRPC Dependencies -->
