--- a/common/pom.xml
+++ b/common/pom.xml
@@ -42,11 +42,11 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
-        <!-- Test -->
+        <!-- Grpc Starter -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-spring-boot-starter</artifactId>
+            <version>2.14.0.RELEASE</version>
         </dependency>
 
     </dependencies>
