Change pom.xml and application.properties to match the grpc Server

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,45 +1,40 @@
 spring.application.name=user-service
 
-#Server
-server.port=8081
+# Server
+grpc.server.port=9090
+server.port=8080
 
-#H2 Database
+# H2 Database
 spring.datasource.url=jdbc:h2:mem:userdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-#SQL Init
+# SQL Init
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:/database/schema.sql
 spring.sql.init.data-locations=classpath:/database/data.sql
 
-#JPA
+# JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-#Kafka
+# Kafka
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-#Multipart file
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
-# Eureka client config
+# Eureka client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 
-# Swagger config
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.deep-linking=false
-
-springdoc.swagger-ui.path=/user-service/swagger/ui
-springdoc.api-docs.path=/user-service/swagger/api-doc
+# Logging
+logging.level.org.springframework=INFO
+logging.level.com.study=DEBUG
+logging.level.com.netflix.discovery=DEBUG
+logging.level.org.springframework.cloud.netflix.eureka=DEBUG
