--- a/common/pom.xml
+++ b/common/pom.xml
@@ -49,6 +49,13 @@
             <version>2.14.0.RELEASE</version>
         </dependency>
 
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
