--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -2,28 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
 
-	<!-- Parent Spring Boot -->
 	<parent>
-		<groupId>com.study</groupId>
-		<artifactId>study-microservices</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.4.3</version>
+		<relativePath/>
 	</parent>
 
-	<!-- Basic Info -->
+	<groupId>com.study</groupId>
 	<artifactId>user-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>user-service</name>
 	<description>gRPC-based user-service</description>
 
-	<!-- Properties -->
 	<properties>
 		<java.version>17</java.version>
 		<lombok.version>1.18.30</lombok.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
-
 		<grpc.version>1.61.0</grpc.version>
 		<protobuf.version>3.25.3</protobuf.version>
 		<protoc.version>3.25.3</protoc.version>
@@ -31,7 +28,6 @@
 		<os.detected.classifier>windows-x86_64</os.detected.classifier>
 	</properties>
 
-	<!-- Dependencies -->
 	<dependencies>
 
 		<!-- Spring Boot Starter Dependencies -->
@@ -40,7 +36,16 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!-- Database -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -55,28 +60,7 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- ModelMapper -->
-		<dependency>
-			<groupId>org.modelmapper</groupId>
-			<artifactId>modelmapper</artifactId>
-			<version>3.1.1</version>
-		</dependency>
-
-		<!-- Cloudinary -->
-		<dependency>
-			<groupId>com.cloudinary</groupId>
-			<artifactId>cloudinary-http5</artifactId>
-			<version>2.0.0</version>
-		</dependency>
-
-		<!-- Dotenv -->
-		<dependency>
-			<groupId>io.github.cdimascio</groupId>
-			<artifactId>dotenv-java</artifactId>
-			<version>2.2.4</version>
-		</dependency>
-
-		<!-- Eureka Client -->
+		<!-- Eureka Client-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -89,7 +73,7 @@
 			<version>1.3.2</version>
 		</dependency>
 
-		<!-- gRPC Starter -->
+		<!-- gRPC Server Starter -->
 		<dependency>
 			<groupId>net.devh</groupId>
 			<artifactId>grpc-server-spring-boot-starter</artifactId>
@@ -103,7 +87,7 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- gRPC Dependencies -->
+		<!-- gRPC & Protobuf -->
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-netty-shaded</artifactId>
@@ -128,16 +112,21 @@
 			<version>${protobuf.version}</version>
 		</dependency>
 
-		<!-- Testing -->
+		<!-- Testing Dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
-	<!-- Spring Cloud BOM -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -150,11 +139,10 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<!-- Build & Plugins -->
+	<!-- Build Plugins -->
 	<build>
 		<plugins>
-
-			<!-- OS-Maven Plugin (Detect OS for protoc) -->
+			<!-- OS-Maven Plugin (Detect OS) -->
 			<plugin>
 				<groupId>kr.motd.maven</groupId>
 				<artifactId>os-maven-plugin</artifactId>
@@ -197,7 +185,6 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<release>${java.version}</release>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
