--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.application.name=api-gateway
 
 # Server
 server.port=8080
+server.error.include-message=always
+
+#gRPC Client
+grpc.client.user-service.address=static://localhost:9090
+grpc.client.user-service.negotiationType=PLAINTEXT
 
 # Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -14,4 +19,6 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
 # Logging
-logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.net.devh.boot.grpc=DEBUG
