--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -75,6 +75,12 @@
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
