--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <!-- MODULES-->
     <modules>
         <module>common</module>
-        <module>eureka-server</module>
+        <module>server-registry</module>
         <module>user-service</module>
         <module>api-gateway</module>
     </modules>
