--- a/server-registry/pom.xml
+++ b/server-registry/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.study</groupId>
-	<artifactId>eureka-server</artifactId>
+	<artifactId>server-registry</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eureka-server</name>
 	<description>eureka-server</description>
