--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -18,6 +18,11 @@ eureka.client.register-with-eureka=true
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
+#Multipart file
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # Logging
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
