Add Netty and Core for Grpc

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,12 +5,12 @@ server.port=8080
 server.error.include-message=always
 
 #gRPC Client
-grpc.client.user-service.address=static://localhost:9091
-grpc.client.user-service.negotiationType=PLAINTEXT
+grpc.client.user-service.address=discovery:///user-service
+grpc.client.user-service.negotiationType=plaintext
+grpc.client.user-service.enableKeepAlive=true
 
 # Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
@@ -24,6 +24,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Logging
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.level.net.devh.boot.grpc=DEBUG
+logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+logging.level.net.devh.boot.grpc.client.channelfactory=DEBUG
