--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -92,6 +92,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- gRPC Client -->
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-client-spring-boot-starter</artifactId>
+			<version>2.15.0.RELEASE</version>
+		</dependency>
+
 		<!-- gRPC & Protobuf -->
 		<dependency>
 			<groupId>io.grpc</groupId>
