--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -23,6 +23,12 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# Swagger config
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.deep-linking=false
+springdoc.swagger-ui.path=/swagger
+
 # Logging
 logging.level.org.springframework.cloud.netflix.eureka=DEBUG
 logging.level.net.devh.boot.grpc.client.channelfactory=DEBUG
