--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=api-gateway
+spring.profiles.active=local
 
 # Server
 server.port=8080
@@ -10,7 +11,6 @@ grpc.client.user-service.negotiationType=plaintext
 grpc.client.user-service.enableKeepAlive=true
 
 # Eureka Client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
