--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,34 +1,11 @@
 spring.application.name=user-service
+spring.profiles.active=local
 
 # Server
 grpc.server.port=9091
 server.port=8081
 
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:userdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# SQL Init
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:/database/schema.sql
-spring.sql.init.data-locations=classpath:/database/data.sql
-
-# JPA
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-
-# Kafka
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
 # Eureka client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
