--- a/user-service/src/main/resources/application-prod.properties
+++ b/user-service/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
-# Postgre
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:user_db}
-spring.datasource.username=${DB_USERNAME:user}
-spring.datasource.password=${DB_PASSWORD:123}
+# Postgres
+spring.datasource.url=jdbc:postgresql://${USER_SERVICE_DB_HOST:localhost}:${USER_SERVICE_DB_PORT:5432}/${USER_SERVICE_DB_NAME:user_db}
+spring.datasource.username=${USER_SERVICE_DB_USERNAME:user}
+spring.datasource.password=${USER_SERVICE_DB_PASSWORD:123}
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
