Update all docker file

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ USER_SERVICE_DB_PORT=5432
 USER_SERVICE_DB_NAME=${POSTGRES_DB}
 USER_SERVICE_DB_USERNAME=${POSTGRES_USER}
 USER_SERVICE_DB_PASSWORD=${POSTGRES_PASSWORD}
+
+# Cloudinary
+CLOUDINARY_URL=
