--- a/server-registry/Dockerfile
+++ b/server-registry/Dockerfile
@@ -1,7 +1,7 @@
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-COPY target/eureka-server.jar app.jar
+COPY target/server-registry-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8761
 ENTRYPOINT ["java", "-jar", "app.jar"]
