--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-COPY target/user-service.jar app.jar
+COPY target/user-service-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 9091
 ENTRYPOINT ["java", "-jar", "app.jar"]
