--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=api-gateway
-spring.profiles.active=local
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # Server
 server.port=8080
