--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=user-service
-spring.profiles.active=local
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
 # Server
 grpc.server.port=9091
