--- a/team-service/src/main/resources/application.properties
+++ b/team-service/src/main/resources/application.properties
@@ -15,3 +15,7 @@ logging.level.org.springframework=INFO
 logging.level.com.study=DEBUG
 logging.level.com.netflix.discovery=DEBUG
 logging.level.org.springframework.cloud.netflix.eureka=DEBUG
+
+# Kafka Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
