--- a/team-service/src/main/resources/application-local.properties
+++ b/team-service/src/main/resources/application-local.properties
@@ -18,3 +18,6 @@ spring.jpa.show-sql=true
 
 # Eureka client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Kafka
+spring.kafka.bootstrap-servers=localhost:7072
