Add Kafka container

--- a/team-service/src/main/resources/application-local.properties
+++ b/team-service/src/main/resources/application-local.properties
@@ -7,7 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-## SQL Init
+# SQL Init
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:/database/schema.sql
 spring.sql.init.data-locations=classpath:/database/data.sql
@@ -20,4 +20,4 @@ spring.jpa.show-sql=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Kafka
-spring.kafka.bootstrap-servers=localhost:9090
+spring.kafka.bootstrap-servers=localhost:9080
