--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,12 +75,13 @@ services:
       - zookeeper
     ports:
       - "9090:9090"
+      - "9080:9080"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9090,PLAINTEXT_HOST://localhost:9080
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9090,PLAINTEXT_HOST://0.0.0.0:9080
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9090,PLAINTEXT_LOCAL://localhost:9080
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9090,PLAINTEXT_LOCAL://0.0.0.0:9080
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_LOCAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
