Add Team service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,7 +8,11 @@ server.error.include-message=always
 #gRPC Client
 grpc.client.user-service.address=discovery:///user-service
 grpc.client.user-service.negotiationType=plaintext
-grpc.client.user-service.enableKeepAlive=true
+grpc.client.user-service.enable-keep-alive=true
+
+grpc.client.team-service.address=discovery:///team-service
+grpc.client.team-service.negotiation-type=plaintext
+grpc.client.team-service.enable-keep-alive= true
 
 # Eureka Client
 eureka.client.fetch-registry=true
