Add Invitation accepted event and handler

--- a/team-service/src/main/resources/application.properties
+++ b/team-service/src/main/resources/application.properties
@@ -19,3 +19,9 @@ logging.level.org.springframework.cloud.netflix.eureka=DEBUG
 # Kafka Producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Kafka Consumer
+spring.kafka.consumer.group-id=team-service-group
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
