--- a/team-service/src/main/resources/application-prod.properties
+++ b/team-service/src/main/resources/application-prod.properties
@@ -1,2 +1,15 @@
+# Postgres
+spring.datasource.url=jdbc:postgresql://${TEAM_SERVICE_DB_HOST:localhost}:${TEAM_SERVICE_DB_PORT:5432}/${TEAM_SERVICE_DB_NAME:user_db}
+spring.datasource.username=${POSTGRES_USERNAME:user}
+spring.datasource.password=${POSTGRES_PASSWORD:123}
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+# Eureka client
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+
 # Kafka
 spring.kafka.bootstrap-servers=kafka:9080
