--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,18 @@
 SPRING_PROFILES_ACTIVE=prod
 
 # PostgreSQL config
-POSTGRES_DB=user_db
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
-# Spring Boot DB connection (user-service)
+# User database
+USER_SERVICE_DB_NAME=user_db
 USER_SERVICE_DB_HOST=user-db
 USER_SERVICE_DB_PORT=5432
-USER_SERVICE_DB_NAME=${POSTGRES_DB}
-USER_SERVICE_DB_USERNAME=${POSTGRES_USER}
-USER_SERVICE_DB_PASSWORD=${POSTGRES_PASSWORD}
+
+# Team database
+TEAM_SERVICE_DB_NAME=team_db
+TEAM_SERVICE_DB_HOST=team-db
+TEAM_SERVICE_DB_PORT=5433
 
 # Cloudinary
 CLOUDINARY_URL=
