Add Plan service module

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>server-registry</module>
         <module>user-service</module>
         <module>team-service</module>
+        <module>plan-service</module>
         <module>api-gateway</module>
     </modules>
 
