Correct docker and .env files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${USER_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
@@ -36,8 +36,8 @@ services:
       USER_SERVICE_DB_HOST: ${USER_SERVICE_DB_HOST}
       USER_SERVICE_DB_PORT: ${USER_SERVICE_DB_PORT}
       USER_SERVICE_DB_NAME: ${USER_SERVICE_DB_NAME}
-      USER_SERVICE_DB_USERNAME: ${USER_SERVICE_DB_USERNAME}
-      USER_SERVICE_DB_PASSWORD: ${USER_SERVICE_DB_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     networks:
       - backend
 
@@ -75,7 +75,7 @@ services:
     ports:
       - "5433:5432"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${TEAM_SERVICE_DB_NAME}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
@@ -98,8 +98,8 @@ services:
       TEAM_SERVICE_DB_HOST: ${TEAM_SERVICE_DB_HOST}
       TEAM_SERVICE_DB_PORT: ${TEAM_SERVICE_DB_PORT}
       TEAM_SERVICE_DB_NAME: ${TEAM_SERVICE_DB_NAME}
-      TEAM_SERVICE_DB_USERNAME: ${TEAM_SERVICE_DB_USERNAME}
-      TEAM_SERVICE_DB_PASSWORD: ${TEAM_SERVICE_DB_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     networks:
       - backend
 
