--- a/team-service/src/main/resources/application-prod.properties
+++ b/team-service/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # Postgres
-spring.datasource.url=jdbc:postgresql://${TEAM_SERVICE_DB_HOST:localhost}:${TEAM_SERVICE_DB_PORT:5432}/${TEAM_SERVICE_DB_NAME:user_db}
+spring.datasource.url=jdbc:postgresql://${TEAM_SERVICE_DB_HOST:localhost}:${TEAM_SERVICE_DB_PORT:5432}/${TEAM_SERVICE_DB_NAME:team_db}
 spring.datasource.username=${POSTGRES_USERNAME:user}
 spring.datasource.password=${POSTGRES_PASSWORD:123}
 
