--- a/plan-service/pom.xml
+++ b/plan-service/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>grpc-stub</artifactId>
             <version>${grpc.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
