--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -14,6 +14,10 @@ grpc.client.team-service.address=discovery:///team-service
 grpc.client.team-service.negotiation-type=plaintext
 grpc.client.team-service.enable-keep-alive= true
 
+grpc.client.plan-service.address=discovery:///plan-service
+grpc.client.plan-service.negotiation-type=plaintext
+grpc.client.plan-service.enable-keep-alive= true
+
 # Eureka Client
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
@@ -32,7 +36,3 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.deep-linking=false
 springdoc.swagger-ui.path=/swagger
-
-# Logging
-logging.level.org.springframework.cloud.netflix.eureka=DEBUG
-logging.level.net.devh.boot.grpc.client.channelfactory=DEBUG
