chore: update docker-compose file

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,10 @@ TEAM_SERVICE_DB_NAME=team_db
 TEAM_SERVICE_DB_HOST=team-db
 TEAM_SERVICE_DB_PORT=5432
 
+# Plan database
+PLAN_SERVICE_DB_NAME=plan_db
+PLAN_SERVICE_DB_HOST=plan-db
+PLAN_SERVICE_DB_PORT=5432
+
 # Cloudinary
 CLOUDINARY_URL=
