--- a/team-service/src/main/resources/application-prod.properties
+++ b/team-service/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 # Postgres
 spring.datasource.url=jdbc:postgresql://${TEAM_SERVICE_DB_HOST:localhost}:${TEAM_SERVICE_DB_PORT:5432}/${TEAM_SERVICE_DB_NAME:team_db}
-spring.datasource.username=${POSTGRES_USERNAME:user}
+spring.datasource.username=${POSTGRES_USER:user}
 spring.datasource.password=${POSTGRES_PASSWORD:123}
 
 # Hibernate
