--- a/user-service/src/main/resources/application-prod.properties
+++ b/user-service/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 # Postgres
 spring.datasource.url=jdbc:postgresql://${USER_SERVICE_DB_HOST:localhost}:${USER_SERVICE_DB_PORT:5432}/${USER_SERVICE_DB_NAME:user_db}
-spring.datasource.username=${POSTGRES_USERNAME:user}
+spring.datasource.username=${POSTGRES_USER:user}
 spring.datasource.password=${POSTGRES_PASSWORD:123}
 
 # Hibernate
