--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=notification-service
+
+# Firebase config
+firebase.config.path=src/main/resources/firebase/firebase-service-account.json
