--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -10,6 +10,11 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
 
+#gRPC Client
+grpc.client.user-service.address=discovery:///user-service
+grpc.client.user-service.negotiationType=plaintext
+grpc.client.user-service.enable-keep-alive=true
+
 # Kafka Producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
@@ -21,4 +26,4 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # Firebase
-firebase.config.path=src/main/resources/firebase/firebase-service-account.json
+firebase.config.path=firebase/firebase-service-account.json
