feat: implement notification service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -18,6 +18,10 @@ grpc.client.plan-service.address=discovery:///plan-service
 grpc.client.plan-service.negotiation-type=plaintext
 grpc.client.plan-service.enable-keep-alive= true
 
+grpc.client.notification-service.address=discovery:///notification-service
+grpc.client.notification-service.negotiation-type=plaintext
+grpc.client.notification-service.enable-keep-alive= true
+
 # Eureka Client
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
