feat: update docker compose and .env files

--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,10 @@ PLAN_SERVICE_DB_NAME=plan_db
 PLAN_SERVICE_DB_HOST=plan-db
 PLAN_SERVICE_DB_PORT=5432
 
+# Notification database
+NOTIFICATION_SERVICE_DB_NAME=notification_db
+NOTIFICATION_SERVICE_DB_HOST=notification-db
+NOTIFICATION_SERVICE_DB_PORT=5432
+
 # Cloudinary
 CLOUDINARY_URL=
