feat: add user created event

--- a/user-service/src/main/resources/application-prod.properties
+++ b/user-service/src/main/resources/application-prod.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka client
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+
+# Kafka
+spring.kafka.bootstrap-servers=kafka:9080
