--- a/user-service/src/main/resources/application-local.properties
+++ b/user-service/src/main/resources/application-local.properties
@@ -17,3 +17,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 # Eureka client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Kafka
+spring.kafka.bootstrap-servers=localhost:9081
