feat: update docker compose and .env files

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,10 @@ NOTIFICATION_SERVICE_DB_NAME=notification_db
 NOTIFICATION_SERVICE_DB_HOST=notification-db
 NOTIFICATION_SERVICE_DB_PORT=5432
 
+# Document database
+DOCUMENT_SERVICE_DB_NAME=document_db
+DOCUMENT_SERVICE_DB_HOST=document-db
+DOCUMENT_SERVICE_DB_PORT=5432
+
 # Cloudinary
 CLOUDINARY_URL=
