feat: update .env and docker compose files.

--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,10 @@ DOCUMENT_SERVICE_DB_NAME=document_db
 DOCUMENT_SERVICE_DB_HOST=document-db
 DOCUMENT_SERVICE_DB_PORT=5432
 
+# Session database
+SESSION_SERVICE_DB_NAME=session_db
+SESSION_SERVICE_DB_HOST=session-db
+SESSION_SERVICE_DB_PORT=5432
+
 # Cloudinary
 CLOUDINARY_URL=
