refactor: change file utils location

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -62,8 +62,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
+        <!-- Spring Boot Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+    </dependencies>
     <build>
         <plugins>
             <!-- Detect OS for protoc -->
