refactor: add gRPC clients

--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=chat-service
+
+#gRPC Client
+grpc.client.user-service.address=discovery:///user-service
+grpc.client.user-service.negotiationType=plaintext
+grpc.client.user-service.enable-keep-alive=true
+
+grpc.client.document-service.address=discovery:///document-service
+grpc.client.document-service.negotiation-type=plaintext
+grpc.client.document-service.enable-keep-alive= true
