--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <!-- gRPC Client -->
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-client-spring-boot-starter</artifactId>
+            <version>2.15.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
