refactor: add team gRPC client

--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -5,6 +5,10 @@ grpc.client.user-service.address=discovery:///user-service
 grpc.client.user-service.negotiationType=plaintext
 grpc.client.user-service.enable-keep-alive=true
 
+grpc.client.team-service.address=discovery:///team-service
+grpc.client.team-service.negotiation-type=plaintext
+grpc.client.team-service.enable-keep-alive= true
+
 grpc.client.document-service.address=discovery:///document-service
 grpc.client.document-service.negotiation-type=plaintext
 grpc.client.document-service.enable-keep-alive= true
