refactor: add chat notification service

--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -98,10 +98,10 @@
             <version>2.15.0.RELEASE</version>
         </dependency>
 
-        <!-- Redis -->
+        <!-- Quartz -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
     </dependencies>
