feat: update docker compose and .env files

--- a/.env.example
+++ b/.env.example
@@ -35,5 +35,10 @@ SESSION_SERVICE_DB_NAME=session_db
 SESSION_SERVICE_DB_HOST=session-db
 SESSION_SERVICE_DB_PORT=5432
 
+# Chat database
+CHAT_SERVICE_DB_NAME=chat_db
+CHAT_SERVICE_DB_HOST=chat-db
+CHAT_SERVICE_DB_PORT=5432
+
 # Cloudinary
 CLOUDINARY_URL=
